@@ -1520,7 +1520,7 @@ void add_abilities(object *op, object *change) {
     }
 }
 
-static int legal_artifact_combination(object *op, artifact *art) {
+int legal_artifact_combination(object *op, artifact *art) {
   int neg, success = 0;
   linked_char *tmp;
   const char *name;
